--- a/Lab_4/lab_4/store/static/css/base.css
+++ b/Lab_4/lab_4/store/static/css/base.css
@@ -187,6 +187,36 @@ main #content {
     overflow:hidden;
 }
 
+.partner-list {
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.partner-list li {
+    padding: 5px;
+    margin: 0px 40px 0px 0px;
+}
+
+.partner-list img {
+    max-width: 100px;
+    height: auto;
+}
+
+.footer_div_container {
+    padding: 0px 100px;
+}
+
+.article-page img {
+    margin: 30px 0px 10px 0px;
+}
+
+.article-page h1 {
+    text-decoration-line: underline;
+}
+
 .product-list .item {
     width:25%;
     padding:10px 20px 10px 0;
