--- a/Lab_4/lab_4/store/templates/store/info/privacyPolicy.html
+++ b/Lab_4/lab_4/store/templates/store/info/privacyPolicy.html
@@ -2,7 +2,48 @@
 {% load static %}
 {% block title %}Privacy policy{% endblock %}
 {% block content %}
-    <div id="main" class="privacy_policy_page">
+    <div class="privacy_policy_page">
+        <pre>
+            Last Updated: Last updated: 14.09.2023
 
+            Welcome to the "Toys for Joy" website. Our company is committed to ensuring the protection of your personal information and safeguarding your privacy. Below, we provide you with information on how we collect, use, and protect your personal data.
+
+            1. Collected Data
+            We may collect the following categories of information:
+
+            1.1. Personal Information
+            Your name and surname.
+            Email address.
+            Phone number.
+            Shipping address.
+            We collect this information when you place an order, register on our website, or contact our customer support.
+
+            1.2. Usage Information
+            We may automatically collect information about your activity on the website, including viewed pages, products and services of interest, and actions taken on the site.
+
+            2. Use of Information
+            We use your personal data for the following purposes:
+
+            Processing and delivering orders.
+            Providing you with information about our products and services.
+            Enhancing and customizing your experience on the website.
+            Contacting you when necessary.
+            3. Information Security
+            We take all necessary measures to protect your personal data. We use modern encryption methods to secure data transmission and limit access to your information to authorized personnel only.
+
+            4. Sharing Information with Third Parties
+            We do not sell, exchange, or transfer your personal data to third parties, except when necessary for order processing or as required by applicable data protection laws.
+
+            5. Your Rights
+            You have the right to access and correct your personal data. You can also request the deletion of your data, provided it does not conflict with current data protection laws.
+
+            6. Consent
+            By using our website, you agree to our Privacy Policy.
+
+            7. Contact Us
+            If you have any questions or concerns about our Privacy Policy, please contact us at toyStore114@toystore.com.
+
+            We value your trust and thank you for choosing "Toys for Joy"!
+        </pre>
     </div>
-{%  endblock%}
+{% endblock %}
