--- a/Lab_4/lab_4/store/templates/store/info/reviews.html
+++ b/Lab_4/lab_4/store/templates/store/info/reviews.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}Reviews{% endblock %}
 {% block content %}
-    <div id="main" class="reviews_page">
+    <section class="reviews_page">
 
-    </div>
+    </section>
 {%  endblock%}
