--- a/Lab_4/lab_4/store/templates/store/base.html
+++ b/Lab_4/lab_4/store/templates/store/base.html
@@ -16,6 +16,7 @@
                     <a href="/shop/" class="logo">Shop</a>
                     <a href="/glossary/" class="logo">Glossarry</a>
                     <a href="/contacts/" class="logo">Contacts</a>
+                    <a href="/vacancy/" class="logo">Vacancy</a>
                     <a href="/policy/" class="logo">Privacy policy</a>
                     <a href="/reviews/" class="logo">Reviews</a>
                     <a href="/promocodes/" class="logo">Promocodes</a>
