--- a/Lab_4/lab_4/store/templates/store/info/reviews.html
+++ b/Lab_4/lab_4/store/templates/store/info/reviews.html
@@ -3,6 +3,23 @@
 {% block title %}Reviews{% endblock %}
 {% block content %}
     <section class="reviews_page">
-
+        <h1>Reviews</h1>
+        <a href="{% url 'review_create' %}">Add Review</a>
+        {% for review in reviews %}
+            <div>
+                <h5>{{ review.reviewer }}</h5>
+                <p>{{ review.rate }}</p>
+                <p>{{ review.creation_date }}</p>
+                <a href="{% url 'review_detail' review.pk %}">
+                    Read more
+                </a>
+                <a href="{% url 'review_delete' review.pk %}">
+                    Delete review
+                </a>
+            </div>
+            {% empty %}
+            <h3>No reviews yet.</h3>
+            <a href="{% url 'review_create' %}">Add Review</a>
+        {% endfor %}
     </section>
-{%  endblock%}
+{% endblock %}
