Added logo and listing

--- a/Lab_4/lab_4/store/templates/store/info/about.html
+++ b/Lab_4/lab_4/store/templates/store/info/about.html
@@ -162,4 +162,11 @@
             <p>Переименование компании.</p>
         </section>
     </section>
+    <section>
+        <h2>Our goals and principles</h2>
+        <listing>
+            Some listing text
+            Wow!
+        </listing>
+    </section>
 {% endblock %}
