--- a/Lab_4/lab_4/store/templates/store/base.html
+++ b/Lab_4/lab_4/store/templates/store/base.html
@@ -3,8 +3,12 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="author" content="tg:@kosmp1" />
+        <meta name="description"
+          content="My study project on web programming" />
         <title>{% block title %}Shop{% endblock %}</title>
         <link href="{% static "css/base.css" %}" rel="stylesheet">
+        <link rel="shortcut icon" type="image/png" href="/media/logos/Logo.png">
     </head>
     <body>
         <header>
